# wild_visual_navigation

docker/: Dockerfile  docker-compose-gui-nvidia.yaml  docker-compose.yaml
scout_description/urdf/: _d455.urdf.xacro  scout_custom_mount.xacro  scout_v2.xacro
wild_visual_navigation/feature_extractor/: feature_extractor.py
wild_visual_navigation/traversability_estimator/: traversability_estimator.py
wild_visual_navigation_jackal/config/wild_visual_navigation/: camera.yaml
wild_visual_navigation_jackal/scripts/: jackal_state_converter_node.py
wild_visual_navigation_real_world/: CMakeLists.txt  package.xml
wild_visual_navigation_real_world/config/wild_visual_navigation/: scout.yaml
wild_visual_navigation_real_world/launch/: test.launch  wild_visual_navigation.launch  wild_visual_robot.launch
wild_visual_navigation_real_world/scripts/: robot_convert.py  scout_state_converter_node.py
wild_visual_navigation_real_world/urdf/: _d455.urdf.xacro  scout_custom_mount.xacro  scout_v2.urdf  scout_v2.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro
wild_visual_navigation_ros/: CMakeLists.txt
wild_visual_navigation_ros/config/wild_visual_navigation/: default.yaml
wild_visual_navigation_ros/launch/: wild_visual_navigation.launch
wild_visual_navigation_ros/scripts/: overlay_images.py  tf_pub.py  wvn_feature_extractor_node copy.py  wvn_feature_extractor_node.py  wvn_learning_node copy.py  wvn_learning_node.py
